service/www/0-static-ip.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: www
